--- a/setup.cfg
+++ b/setup.cfg
@@ -4,5 +4,9 @@ license_files=LICENSE.md
 
 [options]
 package_dir =
+    = src
 packages = find:
 python_requires = >=3.6
+
+[options.packages.find]
+where = src
